# tiny-games-hs

./: README.md  minify.hs  play
base/: woosh.hs
base/woosh/: build.sh  caves.env  forest.env  woosh.hs
default/swish/: build.sh  swish.hs
hackage/snakes/: Imports.hs  build.sh  hie.yaml  snakes.cabal  snakes.template.hs
